--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <main>
       <!-- ==================Hero-image-section-1 =================== -->
 
-      <section class="backgraund-hero section-hero">
+      <section class="section-hero">
         <div class="container section-hero-container">
           <h1 class="hero-h main-title">
             Effective Solutions for Your Business
