--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
   <body>
     <!--========================Header============================ -->
 
-    <header class="page-header">
+    <header class="shadow page-header">
       <div class="container page-header-container">
         <nav class="page-nav">
-          <a class="shadow logo-type link" href="./index.html"
+          <a class="logo-type link" href="./index.html"
             >Web<span class="colorr">Studio</span></a
           >
           <ul class="menu-list list">
-            <li class="shadow menu-item link">
+            <li class="menu-item link">
               <a class="menu-link link" href="./index.html">Studio</a>
             </li>
-            <li class="shadow menu-item link">
+            <li class="menu-item link">
               <a class="menu-link link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="shadow menu-item link">
+            <li class="menu-item link">
               <a class="menu-link link" href="">Contacts</a>
             </li>
           </ul>
@@ -42,12 +42,12 @@
 
         <address class="contacts-i">
           <ul class="contact list">
-            <li class="shadow contact-item">
+            <li class="contact-item">
               <a class="addressa link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="shadow contact-item">
+            <li class="contact-item">
               <a class="addressa link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
