--- a/index.html
+++ b/index.html
@@ -187,18 +187,39 @@
         <div class="container our-team-container">
           <h2 class="flex-h-t our-team-header">Our Team</h2>
           <ul class="flex-container-t our-team-list list">
-            <li class="flex-items-t img">
-              <img
-                src="./images/team/mark-guerrero-1.jpg"
-                alt="foto-mark-guerrero"
-                width="264"
-                height="260"
-              />
-              <div class="post-s-t">
-                <h3 class="team-member-name">Mark Guerrero</h3>
-                <p class="our-team-text">Product Designer</p>
+           <li class="flex-items-t img"><img
+            src="./images/team/mark-guerrero-1.jpg"
+            alt="foto-mark-guerrero"
+            width="264"
+            height="260"
+          />
+          <div class="post-s-t">
+            <h3 class="team-member-name">Mark Guerrero</h3>
+            <p class="our-team-text">Product Designer</p>
+            </div>
+            <div class="icon-our-team">
+              <ul class="icon-our-team-list">
+                <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                  <svg class="list-link-icon link" width="40" height="40">
+                    <use href="./images/sprite.svg#icon-instagram"></use>,
+                    </svg></li>
+                <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                  <svg class="list-link-icon link" width="40" height="40">
+                    <use href="./images/sprite.svg#icon-twitter"></use>,
+                    </svg></li>
+                <li class="icon-our-team-list-link"> <a href="#" class="cocial-list-icon list">
+                  <svg class="list-link-icon link" width="40" height="40">
+                    <use href="./images/sprite.svg#icon-fecebook"></use>,
+                    </svg></li>
+                <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                  <svg class="list-link-icon" width="40" height="40">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>,
+                    </svg></li>
+              </a>
+              </ul>
               </div>
             </li>
+              
 
             <li class="flex-items-t img">
               <img
@@ -210,7 +231,28 @@
               <div class="post-s-t">
                 <h3 class="team-member-name">Tom Ford</h3>
                 <p class="our-team-text">Frontend Developer</p>
-              </div>
+                </div>
+                <div class="icon-our-team">
+                  <ul class="icon-our-team-list">
+                    <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                      <svg class="list-link-icon link" width="40" height="40">
+                        <use href="./images/sprite.svg#icon-instagram"></use>,
+                        </svg></li>
+                    <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                      <svg class="list-link-icon link" width="40" height="40">
+                        <use href="./images/sprite.svg#icon-twitter"></use>,
+                        </svg></li>
+                    <li class="icon-our-team-list-link"> <a href="#" class="cocial-list-icon list">
+                      <svg class="list-link-icon link" width="40" height="40">
+                        <use href="./images/sprite.svg#icon-fecebook"></use>,
+                        </svg></li>
+                    <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                      <svg class="list-link-icon" width="40" height="40">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>,
+                        </svg></li>
+                  </a>
+                  </ul>
+                  </div>
             </li>
 
             <li class="flex-items-t img">
@@ -223,7 +265,28 @@
               <div class="post-s-t">
                 <h3 class="team-member-name">Camila Garcia</h3>
                 <p class="our-team-text">Marketing</p>
-              </div>
+                </div>
+                <div class="icon-our-team">
+                  <ul class="icon-our-team-list">
+                    <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                      <svg class="list-link-icon link" width="40" height="40">
+                        <use href="./images/sprite.svg#icon-instagram"></use>,
+                        </svg></li>
+                    <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                      <svg class="list-link-icon link" width="40" height="40">
+                        <use href="./images/sprite.svg#icon-twitter"></use>,
+                        </svg></li>
+                    <li class="icon-our-team-list-link"> <a href="#" class="cocial-list-icon list">
+                      <svg class="list-link-icon link" width="40" height="40">
+                        <use href="./images/sprite.svg#icon-fecebook"></use>,
+                        </svg></li>
+                    <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                      <svg class="list-link-icon" width="40" height="40">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>,
+                        </svg></li>
+                  </a>
+                  </ul>
+                  </div>
             </li>
 
             <li class="flex-items-t img">
@@ -236,7 +299,28 @@
               <div class="post-s-t">
                 <h3 class="team-member-name">Daniel Wilson</h3>
                 <p class="our-team-text">UI Designer</p>
-              </div>
+                </div>
+                <div class="icon-our-team">
+                  <ul class="icon-our-team-list">
+                    <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                      <svg class="list-link-icon link" width="40" height="40">
+                        <use href="./images/sprite.svg#icon-instagram"></use>,
+                        </svg></li>
+                    <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                      <svg class="list-link-icon link" width="40" height="40">
+                        <use href="./images/sprite.svg#icon-twitter"></use>,
+                        </svg></li>
+                    <li class="icon-our-team-list-link"> <a href="#" class="cocial-list-icon list">
+                      <svg class="list-link-icon link" width="40" height="40">
+                        <use href="./images/sprite.svg#icon-fecebook"></use>,
+                        </svg></li>
+                    <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                      <svg class="list-link-icon" width="40" height="40">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>,
+                        </svg></li>
+                  </a>
+                  </ul>
+                  </div>
             </li>
           </ul>
         </div>
