--- a/index.html
+++ b/index.html
@@ -199,19 +199,19 @@
             </div>
             <div class="icon-our-team">
               <ul class="icon-our-team-list">
-                <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                <li class="icon-our-team-list-link list"><a href="#" class="cocial-list-icon list">
                   <svg class="list-link-icon link" width="40" height="40">
                     <use href="./images/sprite.svg#icon-instagram"></use>,
                     </svg></li>
-                <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                <li class="icon-our-team-list-link list"><a href="#" class="cocial-list-icon list">
                   <svg class="list-link-icon link" width="40" height="40">
                     <use href="./images/sprite.svg#icon-twitter"></use>,
                     </svg></li>
-                <li class="icon-our-team-list-link"> <a href="#" class="cocial-list-icon list">
+                <li class="icon-our-team-list-link list"> <a href="#" class="cocial-list-icon list">
                   <svg class="list-link-icon link" width="40" height="40">
                     <use href="./images/sprite.svg#icon-fecebook"></use>,
                     </svg></li>
-                <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                <li class="icon-our-team-list-link list"><a href="#" class="cocial-list-icon list">
                   <svg class="list-link-icon" width="40" height="40">
                     <use href="./images/sprite.svg#icon-linkedin"></use>,
                     </svg></li>
@@ -234,19 +234,19 @@
                 </div>
                 <div class="icon-our-team">
                   <ul class="icon-our-team-list">
-                    <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                    <li class="icon-our-team-list-link list"><a href="#" class="cocial-list-icon list">
                       <svg class="list-link-icon link" width="40" height="40">
                         <use href="./images/sprite.svg#icon-instagram"></use>,
                         </svg></li>
-                    <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                    <li class="icon-our-team-list-link list"><a href="#" class="cocial-list-icon list">
                       <svg class="list-link-icon link" width="40" height="40">
                         <use href="./images/sprite.svg#icon-twitter"></use>,
                         </svg></li>
-                    <li class="icon-our-team-list-link"> <a href="#" class="cocial-list-icon list">
+                    <li class="icon-our-team-list-link list"> <a href="#" class="cocial-list-icon list">
                       <svg class="list-link-icon link" width="40" height="40">
                         <use href="./images/sprite.svg#icon-fecebook"></use>,
                         </svg></li>
-                    <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                    <li class="icon-our-team-list-link list"><a href="#" class="cocial-list-icon list">
                       <svg class="list-link-icon" width="40" height="40">
                         <use href="./images/sprite.svg#icon-linkedin"></use>,
                         </svg></li>
@@ -268,19 +268,19 @@
                 </div>
                 <div class="icon-our-team">
                   <ul class="icon-our-team-list">
-                    <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                    <li class="icon-our-team-list-link list"><a href="#" class="cocial-list-icon list">
                       <svg class="list-link-icon link" width="40" height="40">
                         <use href="./images/sprite.svg#icon-instagram"></use>,
                         </svg></li>
-                    <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                    <li class="icon-our-team-list-link list"><a href="#" class="cocial-list-icon list">
                       <svg class="list-link-icon link" width="40" height="40">
                         <use href="./images/sprite.svg#icon-twitter"></use>,
                         </svg></li>
-                    <li class="icon-our-team-list-link"> <a href="#" class="cocial-list-icon list">
+                    <li class="icon-our-team-list-link list"> <a href="#" class="cocial-list-icon list">
                       <svg class="list-link-icon link" width="40" height="40">
                         <use href="./images/sprite.svg#icon-fecebook"></use>,
                         </svg></li>
-                    <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                    <li class="icon-our-team-list-link list"><a href="#" class="cocial-list-icon list">
                       <svg class="list-link-icon" width="40" height="40">
                         <use href="./images/sprite.svg#icon-linkedin"></use>,
                         </svg></li>
@@ -302,19 +302,19 @@
                 </div>
                 <div class="icon-our-team">
                   <ul class="icon-our-team-list">
-                    <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                    <li class="icon-our-team-list-link list"><a href="#" class="cocial-list-icon list">
                       <svg class="list-link-icon link" width="40" height="40">
                         <use href="./images/sprite.svg#icon-instagram"></use>,
                         </svg></li>
-                    <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                    <li class="icon-our-team-list-link list"><a href="#" class="cocial-list-icon list">
                       <svg class="list-link-icon link" width="40" height="40">
                         <use href="./images/sprite.svg#icon-twitter"></use>,
                         </svg></li>
-                    <li class="icon-our-team-list-link"> <a href="#" class="cocial-list-icon list">
+                    <li class="icon-our-team-list-link list"> <a href="#" class="cocial-list-icon list">
                       <svg class="list-link-icon link" width="40" height="40">
                         <use href="./images/sprite.svg#icon-fecebook"></use>,
                         </svg></li>
-                    <li class="icon-our-team-list-link"><a href="#" class="cocial-list-icon list">
+                    <li class="icon-our-team-list-link list"><a href="#" class="cocial-list-icon list">
                       <svg class="list-link-icon" width="40" height="40">
                         <use href="./images/sprite.svg#icon-linkedin"></use>,
                         </svg></li>
