--- a/index.html
+++ b/index.html
@@ -382,32 +382,34 @@
           </ul>
         </div>
       </section>
-      <!-- =========== Section-5 =============== -->
+
+      <!-- ================= Section-5 =============== -->
+
       <section class="section-icono"><div class="container section-icono-container ">
         <h2 class="section-icono-h">Customers</h2>
         
           <ul class="section-icono-list">
-            <li class="icono-five"><a href="icono-five-list"><svg class="list-link-five" width="41" height="46,97">
+            <li class="icono-five list"><a href="icono-five-list"><svg class="list-link-five" width="104" height="56">
               <use href="./images/sprite.svg#icon-Logo"></use>,
               </svg></a>
             </li>
-            <li class="icono-five"><a href="icono-five-list"><svg class="list-link-five" width="40" height="52">
+            <li class="icono-five list"><a href="icono-five-list"><svg class="list-link-five" width="104" height="56">
               <use href="./images/sprite.svg#icon-group"></use>,
               </svg></a>
             </li>
-            <li class="icono-five"><a href="icono-five-list"><svg class="list-link-five" width="44" height="41">
+            <li class="icono-five list"><a href="icono-five-list"><svg class="list-link-five" width="104" height="56">
               <use href="./images/sprite.svg#icon-Logo-2"></use>,
               </svg></a>
             </li>
-            <li class="icono-five"><a href="icono-five-list"><svg class="list-link-five" width="84" height="41">
+            <li class="icono-five list"><a href="icono-five-list"><svg class="list-link-five" width="104" height="56">
               <use href="./images/sprite.svg#icon-group-1"></use>,
               </svg></a>
             </li>
-            <li class="icono-five"><a href="icono-five-list"><svg class="list-link-five" width="63" height="45">
+            <li class="icono-five list"><a href="icono-five-list"><svg class="list-link-five" width="104" height="56">
               <use href="./images/sprite.svg#icon-group-2"></use>,
               </svg></a>
             </li>
-            <li class="icono-five"><a href="icono-five-list"><svg class="list-link-five" width="94" height="44">
+            <li class="icono-five list"><a href="icono-five-list"><svg class="list-link-five" width="104" height="56">
               <use href="./images/sprite.svg#icon-group-3"></use>,
               </svg></a>
             </li>
