--- a/index.html
+++ b/index.html
@@ -422,13 +422,44 @@
     <!-- =============================Footer====================== -->
     <footer class="footer">
       <div class="container footer-container">
-        <a class="logo-type-footer link" href="./index.html"
+        <div class="logo-footer-div">
+          <a class="logo-type-footer link" href="./index.html"
           >Web<span class="colorr-footer">Studio</span></a
         >
         <p class="paragraph footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        </div>
+        
+        <div class="icono-footer-div">
+          <p class="p-social-media">Social media</p>
+          <ul class="logo-footer-ul">
+            <li><a href="#" class="cocial-list-icon list">
+              <svg class="list-link-icon-four link" width="40" height="40">
+              <use href="./images/sprite.svg#icon-instagram"></use>,
+              </svg>
+            </a></li>
+            <li><a href="#" class="cocial-list-icon list">
+              <svg class="list-link-icon-four link" width="40" height="40">
+              <use href="./images/sprite.svg#icon-twitter"></use>,
+              </svg>
+            </a></li>
+            <li><a href="#" class="cocial-list-icon list">
+              <svg class="list-link-icon-four link" width="40" height="40">
+              <use href="./images/sprite.svg#icon-fecebook"></use>,
+              </svg>
+            </a></li>
+            <li><a href="#" class="cocial-list-icon list">
+              <svg class="list-link-icon-four link" width="40" height="40">
+              <use href="./images/sprite.svg#icon-linkedin"></use>,
+              </svg>
+            </a></li>
+
+          </ul>
+
+        </div>
+        
       </div>
     </footer>
   </body>
