--- a/index.html
+++ b/index.html
@@ -422,7 +422,8 @@
     <!-- =============================Footer====================== -->
     <footer class="footer">
       <div class="container footer-container">
-        <div class="logo-footer-div">
+        <div class="footer-div">
+          <div class="logo-footer-div">
           <a class="logo-type-footer link" href="./index.html"
           >Web<span class="colorr-footer">Studio</span></a
         >
@@ -435,22 +436,22 @@
         <div class="icono-footer-div">
           <p class="p-social-media">Social media</p>
           <ul class="logo-footer-ul">
-            <li><a href="#" class="cocial-list-icon list">
+            <li class="list"><a href="#" class="cocial-list-icon list">
               <svg class="list-link-icon-four link" width="40" height="40">
               <use href="./images/sprite.svg#icon-instagram"></use>,
               </svg>
             </a></li>
-            <li><a href="#" class="cocial-list-icon list">
+            <li class="list"><a href="#" class="cocial-list-icon list">
               <svg class="list-link-icon-four link" width="40" height="40">
               <use href="./images/sprite.svg#icon-twitter"></use>,
               </svg>
             </a></li>
-            <li><a href="#" class="cocial-list-icon list">
+            <li class="list"><a href="#" class="cocial-list-icon list">
               <svg class="list-link-icon-four link" width="40" height="40">
               <use href="./images/sprite.svg#icon-fecebook"></use>,
               </svg>
             </a></li>
-            <li><a href="#" class="cocial-list-icon list">
+            <li class="list"><a href="#" class="cocial-list-icon list">
               <svg class="list-link-icon-four link" width="40" height="40">
               <use href="./images/sprite.svg#icon-linkedin"></use>,
               </svg>
@@ -458,7 +459,8 @@
 
           </ul>
 
-        </div>
+        </div></div>
+        
         
       </div>
     </footer>
