--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <p class="our-team-text">Product Designer</p>
                 <ul class="icon-our-team-list">
                   <li class="icon-our-team-list-link list">
-                    <a href="#" class="cocial-list-icon list"
+                    <a href="" class="cocial-list-icon list"
                       ><svg
                         class="list-link-icon-four link"
                         width="16"
@@ -196,7 +196,7 @@
 
 
                  <li class="icon-our-team-list-link list">
-                    <a href="#" class="cocial-list-icon list">
+                    <a href="" class="cocial-list-icon list">
                       <svg
                         class="list-link-icon-four link"
                         width="16"
@@ -209,7 +209,7 @@
                   </li>
 
                   <li class="icon-our-team-list-link list">
-                    <a href="#" class="cocial-list-icon list">
+                    <a href="" class="cocial-list-icon list">
                       <svg
                         class="list-link-icon-four link"
                         width="16"
@@ -221,7 +221,7 @@
                     </a>
                   </li>
                   <li class="icon-our-team-list-link list">
-                    <a href="#" class="cocial-list-icon list">
+                    <a href="" class="cocial-list-icon list">
                       <svg
                         class="list-link-icon-four link"
                         width="16"
@@ -264,7 +264,7 @@
                   </li>
 
                   <li class="icon-our-team-list-link list">
-                    <a href="#" class="cocial-list-icon list">
+                    <a href="" class="cocial-list-icon list">
                       <svg
                         class="list-link-icon-four link"
                         width="16"
@@ -277,7 +277,7 @@
                   </li>
 
                   <li class="icon-our-team-list-link list">
-                    <a href="#" class="cocial-list-icon list">
+                    <a href="" class="cocial-list-icon list">
                       <svg
                         class="list-link-icon-four link"
                         width="16"
@@ -289,7 +289,7 @@
                     </a>
                   </li>
                   <li class="icon-our-team-list-link list">
-                    <a href="#" class="cocial-list-icon list">
+                    <a href="" class="cocial-list-icon list">
                       <svg
                         class="list-link-icon-four link"
                         width="16"
@@ -318,7 +318,7 @@
                 <p class="our-team-text">Marketing</p>
                 <ul class="icon-our-team-list">
                   <li class="icon-our-team-list-link list">
-                    <a href="#" class="cocial-list-icon list"
+                    <a href="" class="cocial-list-icon list"
                       ><svg
                         class="list-link-icon-four link"
                         width="16"
@@ -331,7 +331,7 @@
                   </li>
 
                   <li class="icon-our-team-list-link list">
-                    <a href="#" class="cocial-list-icon list">
+                    <a href="" class="cocial-list-icon list">
                       <svg
                         class="list-link-icon-four link"
                         width="16"
@@ -344,7 +344,7 @@
                   </li>
 
                   <li class="icon-our-team-list-link list">
-                    <a href="#" class="cocial-list-icon list">
+                    <a href="" class="cocial-list-icon list">
                       <svg
                         class="list-link-icon-four link"
                         width="16"
@@ -356,7 +356,7 @@
                     </a>
                   </li>
                   <li class="icon-our-team-list-link list">
-                    <a href="#" class="cocial-list-icon list">
+                    <a href="" class="cocial-list-icon list">
                       <svg
                         class="list-link-icon-four link"
                         width="16"
@@ -372,7 +372,7 @@
             </li>
 
 
-            
+
 
             <li class="flex-items-t img">
               <img
@@ -386,7 +386,7 @@
                 <p class="our-team-text">UI Designer</p>
                 <ul class="icon-our-team-list">
                   <li class="icon-our-team-list-link list">
-                    <a href="#" class="cocial-list-icon list"
+                    <a href="" class="cocial-list-icon list"
                       ><svg
                         class="list-link-icon-four link"
                         width="16"
@@ -399,7 +399,7 @@
                   </li>
 
                   <li class="icon-our-team-list-link list">
-                    <a href="#" class="cocial-list-icon list">
+                    <a href="" class="cocial-list-icon list">
                       <svg
                         class="list-link-icon-four link"
                         width="16"
@@ -412,7 +412,7 @@
                   </li>
 
                   <li class="icon-our-team-list-link list">
-                    <a href="#" class="cocial-list-icon list">
+                    <a href="" class="cocial-list-icon list">
                       <svg
                         class="list-link-icon-four link"
                         width="16"
@@ -424,7 +424,7 @@
                     </a>
                   </li>
                   <li class="icon-our-team-list-link list">
-                    <a href="#" class="cocial-list-icon list">
+                    <a href="" class="cocial-list-icon list">
                       <svg
                         class="list-link-icon-four link"
                         width="16"
