--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 <p class="our-team-text">Frontend Developer</p>
                 <ul class="icon-our-team-list">
                   <li class="icon-our-team-list-link list">
-                    <a href="#" class="cocial-list-icon list"
+                    <a href="" class="cocial-list-icon list"
                       ><svg
                         class="list-link-icon-four link"
                         width="16"
