--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
             <li class="icono-five list">
               <a href="" class="icono-five-list"
                 ><svg class="list-link-five" width="104" height="56">
-                  <use href="./images/icons.svg#icon-group-1"></use>
+                  <use href="./images/icons.svg#icon-Logo-3"></use>
                   
                 </svg></a
               >
@@ -476,7 +476,7 @@
             <li class="icono-five list">
               <a href="" class="icono-five-list"
                 ><svg class="list-link-five" width="104" height="56">
-                  <use href="./images/icons.svg#icon-Logo-2"></use>
+                  <use href="./images/icons.svg#icon-group-1"></use>
                   
                 </svg></a
               >
@@ -517,7 +517,7 @@
         <div class="icono-footer-div">
           <p class="p-social-media">Social media</p>
           <ul class="logo-footer-ul">
-            <li class="list">
+            <li class="list-footer">
               <a href="#" class="cocial-list-icon-footer list">
                 <svg class="list-link-icon-footer link" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
@@ -525,7 +525,7 @@
                 </svg>
               </a>
             </li>
-            <li class="list">
+            <li class="list-footer">
               <a href="#" class="cocial-list-icon-footer list">
                 <svg class="list-link-icon-footer link" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
@@ -533,7 +533,7 @@
                 </svg>
               </a>
             </li>
-            <li class="list">
+            <li class="list-footer">
               <a href="#" class="cocial-list-icon-footer list">
                 <svg class="list-link-icon-footer link" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
@@ -541,7 +541,7 @@
                 </svg>
               </a>
             </li>
-            <li class="list">
+            <li class="list-footer">
               <a href="#" class="cocial-list-icon-footer list">
                 <svg class="list-link-icon-footer link" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
