--- a/portfolio.html
+++ b/portfolio.html
@@ -274,7 +274,7 @@
         <div class="icono-footer-div">
           <p class="p-social-media">Social media</p>
           <ul class="logo-footer-ul">
-            <li class="list">
+            <li class="list-footer">
               <a href="#" class="cocial-list-icon-footer list">
                 <svg class="list-link-icon-footer link" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
@@ -282,7 +282,7 @@
                 </svg>
               </a>
             </li>
-            <li class="list">
+            <li class="list-footer">
               <a href="#" class="cocial-list-icon-footer list">
                 <svg class="list-link-icon-footer link" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
@@ -290,7 +290,7 @@
                 </svg>
               </a>
             </li>
-            <li class="list">
+            <li class="list-footer">
               <a href="#" class="cocial-list-icon-footer list">
                 <svg class="list-link-icon-footer link" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
@@ -298,7 +298,7 @@
                 </svg>
               </a>
             </li>
-            <li class="list">
+            <li class="list-footer">
               <a href="#" class="cocial-list-icon-footer list">
                 <svg class="list-link-icon-footer link" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
